Delete method UpdateStatusEpic from Interface TaskManager